--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ line-height: 50px;
 }
 /* about section styling  */
 .about-section{
-  height:70vh
+  height:80vh
 }
 .about-section h1{
   font-weight: 900;
@@ -75,3 +75,23 @@ line-height: 50px;
   line-height: 30px;
   font-size: 19px;
 }
+/* team image styling */
+.team {
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.team img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+
+
+
+
