--- a/style.css
+++ b/style.css
@@ -92,8 +92,11 @@ line-height: 50px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
-
-
+/* footer section styling */
+.footer-section{
+  background-color: #000000;
+  font-family: 'Ubuntu';
+}
 
 
 
