--- a/jobs.css
+++ b/jobs.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital@0;1&family=Montserrat:wght@300;400;500&family=Ubuntu:ital,wght@0,400;1,400;1,500&display=swap');
 body{
-    background-color: rgb(17, 12, 12);
-    color: #fff;
+    background-color: rgb(239, 250,250);
     font-family: 'Ubuntu';
 }
 /* h1 styling */
