--- a/style.css
+++ b/style.css
@@ -76,7 +76,8 @@ line-height: 50px;
 }
 /* about section styling  */
 .about-section{
-  height:80vh
+  height:80vh;
+  background-color:  rgb(239, 250,250);
 }
 .about-section h1{
   font-weight: 900;
