--- a/jobs.css
+++ b/jobs.css
@@ -139,3 +139,33 @@ a:hover {
 .right-side p {
     margin: 5px 0;
 }
+
+/* job posting styling  */
+.job-post-form {
+    font-family: 'Roboto', sans-serif;
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 20px;
+    max-width: 500px;
+    margin: 0 auto;
+    margin-top: 50px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.job-post-form h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+.job-post-form .form-label {
+    font-weight: bold;
+}
+
+.job-post-form .form-control {
+    border-radius: 4px;
+}
+
+.job-post-form .btn-primary {
+    width: 100%;
+    font-size: 16px;
+    font-weight: bold;
+}
