--- a/jobs.css
+++ b/jobs.css
@@ -155,9 +155,12 @@ a:hover {
 .job-post-form h2 {
     text-align: center;
     margin-bottom: 20px;
+    font-weight: bold;
+     color: #333;
 }
 .job-post-form .form-label {
     font-weight: bold;
+    color: #555;
 }
 
 .job-post-form .form-control {
