--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ line-height: 50px;
 .footer-section .social-icons a {
   margin-right: 0.5rem;
 }
-
+/* ---------------------------------------------------------------------------------------------------- */
 /* job section styling */
 
 body{
@@ -371,8 +371,9 @@ a:hover {
 .right-side p {
     margin: 5px 0;
 }
-
+/* ----------------------------------------------------------------------------------------------------- */
 /* job posting styling  */
+
 .job-post-form {
     font-family: 'Roboto', sans-serif;
     background-color: #fff;
