--- a/style.css
+++ b/style.css
@@ -231,21 +231,21 @@ line-height: 50px;
 /* ---------------------------------------------------------------------------------------------------- */
 /* job section styling */
 
-body{
+/* body{
     background-color: rgb(239, 250,250);
     font-family: 'Ubuntu';
-}
+} */
 /* h1 styling */
-h1 {
+/* h1 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 32px;
     text-align: center;
     margin-top: 40px;
     margin-bottom: 20px;
-}
+} */
 /* form input styling */
-#roleInput {
+/* #roleInput {
     display: inline-block;
     width: 50%;
     padding: 8px 12px;
@@ -255,10 +255,10 @@ h1 {
     border-radius: 4px;
     box-sizing: border-box;
     margin-bottom: 10px;
-}
+} */
 
 /* search button styling */
-.search-button {
+/* .search-button {
     display: inline-block;
     padding: 8px 12px;
     background-color: #337ab7;
@@ -268,15 +268,15 @@ h1 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     border: none;
-}
+} */
 
-.search-button:hover {
+/* .search-button:hover {
     background-color: #23527c;
     cursor: pointer;
-}
+} */
 
 /* link tag styling */
-a {
+/* a {
     text-decoration: none;
     display: inline-block;
     padding: 8px 12px;
@@ -288,10 +288,10 @@ a {
 
 a:hover {
     background-color: #23527c;
-}
+} */
 
 /* styling the fetched items */
-.job-details {
+/* .job-details {
     display: flex;
     align-items: center;
     padding: 10px;
@@ -324,7 +324,7 @@ a:hover {
     margin: 5px 0;
 }
 /* link tag styling */
-a {
+/* a {
     text-decoration: none;
     display: inline-block;
     padding: 8px 12px;
@@ -336,10 +336,10 @@ a {
 
 a:hover {
     background-color: #23527c;
-}
+} */ 
 /* styling the fetched items  */
 
-.job-details {
+/* .job-details {
     display: flex;
     align-items: center;
     padding: 10px;
@@ -362,17 +362,17 @@ a:hover {
     width: 100%;
     height: 100%;
     object-fit: contain;
-}
+} */
 
-.right-side {
+/* .right-side {
     margin-left: auto;
 }
 
 .right-side p {
     margin: 5px 0;
-}
+} */
 /* ----------------------------------------------------------------------------------------------------- */
-/* job posting styling  */
+/* job posting styling 
 #jobButton {
   background-color: #337ab7;
   color: #fff;
@@ -417,9 +417,9 @@ a:hover {
     width: 100%;
     font-size: 16px;
     font-weight: bold;
-}
+} */
 /* form to appear on the page */
-/* CSS styles for the popup form */
+/* CSS styles for the popup form
 .job-popup-form {
   position: fixed;
   top: 50%;
@@ -436,7 +436,7 @@ a:hover {
 }
 
 /* styles for the overlay */
-#overlay {
+/* #overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -445,6 +445,6 @@ a:hover {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 9998;
   display: none;
-}
+} */ 
 
 
